--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: bullock_production
-  username: bullock
+  username: root
   password: <%= ENV['BULLOCK_DATABASE_PASSWORD'] %>
